🔨 fix: fieldset legend bug on safari iOS

--- a/src/assets/scss/blocks/_switcher.scss
+++ b/src/assets/scss/blocks/_switcher.scss
@@ -67,6 +67,7 @@
 
 	&__fieldset {
 		display: grid;
+		grid-template-rows: auto 1fr;
 		position: relative;
 		flex: 1;
 		height: 8rem;
@@ -76,6 +77,11 @@
 
 	&__fieldset legend {
 		margin-bottom: 0.25rem;
+	}
+
+	&__wallpapers-container {
+		position: relative;
+		overflow: auto;
 	}
 
 	&__wallpapers {
